# velocity-os

./: .gitignore  README.md  demo_youtube_downloader.py  install.py  phase_summary.py  quick_start.py  requirements.txt  setup_path_a.py  vcpkg.json  velocity_launch.py  verify_all_phases.py
brain/: __init__.py  main.py  motor_bridge.py  test_bridge.py  types.py
brain/cortex/: README.md  __init__.py  brain_adapter.py  composite_executor.py  cross_layer.py  diagnostics.py  learning.py  observer.py  processor.py  symbolic.py  synthesizer.py  temporal_context.py
brain/ganglia/: automation.py  patterns.json  points.json  reflexes.py  scanner.py  shell_scripts.py  websearch.py
brain/memory/: README.md  app_profiles.json  core_protocols.json  cortex_execution_log.json  demo_youtube_log.json  element_cache.json  execution_history.json  failure_log.json  os_manual.json  processor_config.json  skills.json  success_matrix.json
brain/senses/: README.md  __init__.py  ui_parser.py  vision.py
brain/utils/: win_focus.py
brain/wizard/: deep_client.py  fast_client.py  llm_client.py  memory_bank.py  planner.py  vision_logic.py
core/: CMakeLists.txt
core/include/: amygdala.h  json.hpp  miniaudio.h
core/safety/: Cargo.toml
core/safety/src/: lib.rs
core/src/: bezier.cpp  bezier.h  cochlea.cpp  cortex_main.cpp  hybrid_brain.cpp  hybrid_brain.h  lizard_api.cpp  lizard_keyboard.cpp  lizard_keyboard.h  lizard_mouse.cpp  lizard_mouse.h  lizard_vision.cpp  main.cpp  platform_utils.cpp  platform_utils.h  proprioception.cpp  reflex_dispatcher.cpp  vision_engine.cpp  vision_engine.h
documentation/: 00_READ_THIS_FIRST.md  DELIVERY_PACKAGE.md  GAP_ANALYSIS.py  PHASE4_COMPLETION_REPORT.md  PHASE_0_COMPLETE.md  PHASE_COMPLETION_REPORT.md  PRESENTATION.md  PROJECT_COMPLETION_SUMMARY.md  PROJECT_INDEX.md  REALITY_CHECK.md  START_HERE.md  TEST_YOURSELF_CHECKLIST.txt  VELOCITY_DOCUMENTATION.md  reality_check.py
scripts/: README.md  graft_arch.sh  graft_fedora.sh  graft_kali.sh  graft_windows.ps1  map_coords.py  send_intents.py
tests/: README.md  debug_planner.py  test_clipboard_verify.py  test_components.py  test_core_latency.py  test_cpp_components.py  test_focus_check.py  test_focus_proper.py  test_integration_validation.py  test_motor.py  test_path_a.py  test_phase1.py  test_phase2.py  test_phase2_4_integration.py  test_phase3.py  test_phase4.py  test_planner_responses.py  test_recompile_validation.py  test_sighted_agent.py  test_system_level.py  test_tts_direct.py  test_type_direct.py  test_voice.py  verify_vision.py
xlabs/: __init__.py
xlabs/foundry/: __init__.py  queen.py  synapse.py
xlabs/foundry/drones/: __init__.py  analyst.py  base.py  scout.py  sentry.py
xlabs/gym/: __init__.py  cortex.py  storage.py
xlabs/medic/: __init__.py  supervisor.py  surgeon.py  triage.py
xlabs/senses/: __init__.py  main.py
xlabs/senses/ears/: __init__.py  stream.py  stt_worker.py  (+4 more)
xlabs/university/: __init__.py  dean.py  dojo.py  lab.py  library.py
(+6 files in other folders)
